[package]
name = "mmwavelink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = { version = "0.7", default-features = false }
libc = { version = "*", default-features = false }
c2rust-bitfields = { version = "*", default-features = false, features = ["no_std"] }
rtt-target = { version = "0.3.0" }